# geultto_10_4th

./: README.md  pyproject.toml
third/: docker-compose-cpu-bound-alpine.yml  docker-compose-cpu-bound-debian.yml  docker-compose-io-bound-alpine.yml  docker-compose-io-bound-debian.yml  index.md
third/containers/alpine/3.12/: Dockerfile-01-kmeans  Dockerfile-02-random-forest
third/containers/alpine/3.13/: Dockerfile-01-kmeans  Dockerfile-02-random-forest
third/containers/debian/3.12/: Dockerfile-01-kmeans  Dockerfile-02-random-forest
third/containers/debian/3.13/: Dockerfile-01-kmeans  Dockerfile-02-random-forest
third/cpu/: 01_kmeans.py  02_random_forest.py  requirements.txt
third/io/query/: conftest.py  domain.py  factories.py  repositories.py  table.py  test_all_in_one.py  test_entity.py  test_table.py
third/io/query/tests/: conftest.py  test_entity.py  test_table.py
third/tests/: Dockerfile-03-tested  docker-compose.yml  tested.py
