[tool.poetry]
name = "geultto10"
version = "0.1.0"
description = ""
authors = ["AmidCode <seongeun.yu@angel-robotics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.cpu]
optional = true

[tool.poetry.group.cpu.dependencies]
numpy = "^2.1.3"
psutil = "^6.1.0"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"

[tool.poetry.group.io]
optional = true

[tool.poetry.group.io.dependencies]
fastapi = "^0.109.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
faker = "^33.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
